Fixed button distort issue

--- a/src/app/_modules/schema/_components/v2/duplicacy/duplicacy.component.scss
+++ b/src/app/_modules/schema/_components/v2/duplicacy/duplicacy.component.scss
@@ -4,6 +4,10 @@ div.root {
   height: 100%;
   overflow: hidden;
 
+  .action-button {
+    margin: 0px 2px;
+  }
+
   .breadcrum-toolbar {
     align-items: center;
     min-height: 40px;
